Deployed AAI Debugger application and working towards a functional setup

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-   DocumentRoot /var/www/html
-   Redirect permanent / https://localhost/
+   #DocumentRoot /var/www/html
+   Redirect permanent / https://localhost/aai/app
 </VirtualHost>
 
 <IfModule mod_ssl.c>
@@ -43,8 +43,8 @@
 		# MSIE 7 and newer should be able to use keepalive
 		BrowserMatch "MSIE [17-9]" ssl-unclean-shutdown
 
-		JkMount /aai/* ajp13_worker
-	
+        JkMount /aai/* ajp13_worker
+
 		<Location /aai/>
 			AuthType            shibboleth
             ShibRequireSession  Off
@@ -53,12 +53,8 @@
             Require             shibboleth
         </Location>
 	
-		<Location /protected/>
-			AuthType shibboleth
-			ShibRequestSetting requireSession 1
-			Require valid-user
-		</Location>
 
+        #Proxy configuration for the Identity Provider
         ProxyPreserveHost On
         RequestHeader set X-Forwarded-Proto "https"
 		ProxyPass "/idp" "http://localhost:8080/idp"
