--- a/apache/workers.properties
+++ b/apache/workers.properties
@@ -58,7 +58,7 @@ ps=/
 #
 # The workers that your plugins should create and work with
 #
-worker.list=ajp13_worker
+worker.list=ajp13_worker,jkstatus
 
 #
 #------ ajp13_worker WORKER DEFINITION ------------------------------
@@ -83,6 +83,11 @@ worker.ajp13_worker.lbfactor=1
 #
 # Specify the size of the open connection cache.
 #worker.ajp13_worker.cachesize
+
+# Define a 'jkstatus' worker using status
+worker.jkstatus.type=status
+# Define a 'jkstatus' worker using status
+worker.jkmanager.type=status
 
 #
 #------ DEFAULT LOAD BALANCER WORKER DEFINITION ----------------------
