Working setup, some issues remain, which are listed in the todo section of the readme

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
    #DocumentRoot /var/www/html
-   Redirect permanent / https://localhost/aai/app
+   #Redirect permanent / https://localhost/aai/app
 </VirtualHost>
 
 <IfModule mod_ssl.c>
