Added both java and golang session hook services

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -1,6 +1,8 @@
 <VirtualHost *:80>
-   #DocumentRoot /var/www/html
-   #Redirect permanent / https://localhost/aai/app
+   DocumentRoot /var/www/html
+   RewriteEngine On
+   RewriteCond %{HTTPS} !=on
+   RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
 </VirtualHost>
 
 <IfModule mod_ssl.c>
@@ -43,21 +45,55 @@
 		# MSIE 7 and newer should be able to use keepalive
 		BrowserMatch "MSIE [17-9]" ssl-unclean-shutdown
 
-        JkMount /aai/* ajp13_worker
-
-		<Location /aai/>
-			AuthType            shibboleth
-            ShibRequireSession  Off
-            ShibUseHeaders      On
-            Satisfy             All
-            Require             shibboleth
-        </Location>
-	
-
-        #Proxy configuration for the Identity Provider
         ProxyPreserveHost On
-        RequestHeader set X-Forwarded-Proto "https"
-		ProxyPass "/idp" "http://localhost:8080/idp"
-        ProxyPassReverse "/idp" "https://localhost:8080/idp"
+
+        #
+        # Proxy configuration for the Identity Provider
+        #
+        <Location /idp>
+		    ProxyPass "http://localhost:8080/idp"
+            ProxyPassReverse "https://localhost/idp"
+        </Location>
+
+        #
+        # aagregator session hook configuration
+        # java webservice
+        #
+        <Location /aagregator/java>
+            AuthType            shibboleth
+            ShibRequestSetting  requireSession 1
+            ShibUseHeaders      On
+            require             valid-user
+
+            ProxyPass "ajp://localhost:8009/aagregator/hook"
+            ProxyPassReverse "ajp://localhost:8009/aagregator/hook"
+        </Location>
+
+        #
+        # aagregator session hook configuration
+        # golang webservice
+        #
+        <Location /aagregator/golang>
+            AuthType            shibboleth
+            ShibRequestSetting  requireSession 1
+            ShibUseHeaders      On
+            require             valid-user
+
+            ProxyPass "http://localhost:9000/hello"
+            ProxyPassReverse "http://localhost:9000/hello"
+        </Location>
+
+        #
+        # demo application
+        #
+        <Location /demo>
+            AuthType            shibboleth
+            ShibRequestSetting  requireSession 0
+            ShibUseHeaders      On
+            require             shibboleth
+
+            ProxyPass "ajp://localhost:8009/app"
+            ProxyPassReverse "ajp://localhost:8009/app"
+        </Location>
 	</VirtualHost>
 </IfModule>
