--- a/apache/workers.properties
+++ b/apache/workers.properties
@@ -58,7 +58,7 @@ ps=/
 #
 # The workers that your plugins should create and work with
 #
-worker.list=ajp13_worker,jkstatus
+worker.list=ajp13_worker,jkstatus,jkmanager
 
 #
 #------ ajp13_worker WORKER DEFINITION ------------------------------
