--- a/openssl/apache.cert.conf
+++ b/openssl/apache.cert.conf
@@ -10,4 +10,6 @@ string_mask=MASK:0002
 0.organizationName=sp.test.clarin.eu
 emailAddress=info@sp.test.clarin.eu
 countryName=EU
-commonName=www.shibboleth.example
+commonName=localhost
+[alt_names]
+DNS.1 = localhost
