--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -1,5 +1,11 @@
 [supervisord]
-nodaemon=true
+nodaemon=true                                   ; run supervisord in the foreground
+logfile=/var/log/supervisord/supervisord.log    ; supervisord log file
+logfile_maxbytes=50MB                           ; maximum size of logfile before rotation
+logfile_backups=10                              ; number of backed up logfiles
+loglevel=info                                   ; info, debug, warn, trace
+pidfile=/var/run/supervisord.pid                ; pidfile location
+childlogdir=/var/log/supervisord/               ; where child log files will live
 
 [program:shibd]
 command=/usr/sbin/shibd -f -c /etc/shibboleth/shibboleth2.xml -p /var/run/shibboleth/shibd.pid -F
@@ -9,3 +15,8 @@ command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFO
 
 [program:tomcat]
 command=/usr/share/tomcat8/bin/catalina.sh run
+
+[program:sessionhook]
+command=/opt/sp-aagregator-golang
+stdout_logfile=/var/log/supervisor/sessionhook_stdout.log
+stderr_logfile=/var/log/supervisor/sessionhook_stderr.log
