Added multiple aagregator session hooks for experimenting and a new aai debugger

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -47,6 +47,18 @@
 
         ProxyPreserveHost On
 
+        <Location /hook>
+			Options 	        +ExecCGI -Indexes
+			AddHandler 	        cgi-script .py .go
+			DirectoryIndex 	    sp-aagregator-python.py
+
+            AuthType            shibboleth
+            ShibRequestSetting  requireSession 0
+            ShibUseHeaders      Off
+            Satisfy             All
+            Require             shibboleth
+        </Location>
+
         #
         # Proxy configuration for the Identity Provider
         #
@@ -94,6 +106,19 @@
 
             ProxyPass "ajp://localhost:8009/app"
             ProxyPassReverse "ajp://localhost:8009/app"
+        </Location>
+
+        #
+        # debugger application
+        #
+        <Location /debugger>
+            AuthType            shibboleth
+            ShibRequestSetting  requireSession 1
+            ShibUseHeaders      On
+            require             shibboleth
+
+            ProxyPass "ajp://localhost:8009/debugger"
+            ProxyPassReverse "ajp://localhost:8009/debugger"
         </Location>
 	</VirtualHost>
 </IfModule>
