Removed unused golang binaries and update golang cgi script

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -47,10 +47,11 @@
 
         ProxyPreserveHost On
 
-        <Location /hook>
+        <Location /aa-statistics>
 			Options 	        +ExecCGI -Indexes
 			AddHandler 	        cgi-script .py .go
-			DirectoryIndex 	    sp-aagregator-python.py
+			#DirectoryIndex 	clarin-sp-aagregator-golang.py
+			DirectoryIndex      clarin-sp-aagregator-golang.go
 
             AuthType            shibboleth
             ShibRequestSetting  requireSession 0
