Switch to no default submit

--- a/apache/default.conf
+++ b/apache/default.conf
@@ -47,6 +47,8 @@
 
         ProxyPreserveHost On
 
+        SetEnv submit_sp_stats false
+
         <Location /aa-statistics>
 			Options 	        +ExecCGI -Indexes
 			AddHandler 	        cgi-script .py .go
